# edu-sync

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
edu-sync/: Cargo.toml  README.md
edu-sync-cli/: Cargo.toml  README.md
edu-sync-cli/src/: add.rs  config.rs  fetch.rs  main.rs  sync.rs  util.rs
edu-sync/src/: account.rs  config.rs  content.rs  lib.rs  url_format.html  util.rs
edu-ws/: Cargo.toml  README.md
edu-ws-derive/: Cargo.toml  README.md
edu-ws-derive/src/: lib.rs
edu-ws/src/: ajax.rs  lib.rs  serde.rs  ws.rs
edu-ws/src/response/: config.rs  content.rs  course.rs  info.rs  mod.rs
edu-ws/src/token/: login.rs  mod.rs  sso.rs
