[package]
name = "edu-sync-cli"
version = "0.1.2"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Moodle synchronization utility (CLI)."
repository = "https://github.com/mkroening/edu-sync"
license = "GPL-3.0-only"
keywords = ["moodle", "synchronization", "download"]
categories = ["command-line-utilities"]

[dependencies]
edu-sync = { path = "../edu-sync" }

anyhow = "1.0"
clap = { version = "3", features = ["derive"] }
dialoguer = "0.11"
env_logger = "0.11"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
human-panic = "1.0"
indicatif = "0.17"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2.2"
