[package]
name = "edu-sync-cli"
version = "0.2.1"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Moodle synchronization utility (CLI)."
repository = "https://github.com/mkroening/edu-sync"
license = "GPL-3.0-only"
keywords = ["moodle", "synchronization", "download"]
categories = ["command-line-utilities"]

[dependencies]
edu-sync = { path = "../edu-sync" }

anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
human-panic = "2"
indicatif = "0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"
