[package]
name = "edu-sync"
version = "0.1.2"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Moodle synchronization library."
repository = "https://github.com/mkroening/edu-sync"
license = "GPL-3.0-only"
keywords = ["moodle", "synchronization", "download"]
categories = ["asynchronous", "web-programming"]

[dependencies]
edu-ws = { path = "../edu-ws" }

directories = "5"
filetime = "0.2"
keyring = "2"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["fs"] }
toml = "0.8"
url = "2.2"
