[package]
name = "edu-sync"
version = "0.2.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Moodle synchronization library."
repository = "https://github.com/mkroening/edu-sync"
license = "GPL-3.0-only"
keywords = ["moodle", "synchronization", "download"]
categories = ["asynchronous", "web-programming"]

[dependencies]
edu-ws = { path = "../edu-ws" }

directories = "5"
filetime = "0.2"
regex = "1.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["fs"] }
toml = "0.8"
tracing = "0.1"
url = "2.2"
