[package]
name = "edu-ws-derive"
version = "0.1.1"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Proc macros for edu-ws."
homepage = "https://edu-sync.org"
repository = "https://github.com/edu-sync/edu-sync"
license = "GPL-3.0-only"
keywords = ["derive"]
categories = ["rust-patterns"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true
