[package]
name = "edu-ws-derive"
version = "0.3.1"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Proc macros for edu-ws."
repository = "https://github.com/mkroening/edu-sync"
license = "GPL-3.0-only"
keywords = ["derive"]
categories = ["rust-patterns"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
