[package]
name = "edu-ws"
version = "0.1.1"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2018"
description = "Moodle web service HTTP API wrapper."
homepage = "https://edu-sync.org"
repository = "https://github.com/edu-sync/edu-sync"
license = "GPL-3.0-only"
keywords = ["moodle", "web service", "client", "http"]
categories = ["api-bindings", "asynchronous", "authentication", "web-programming"]

[dependencies]
edu-ws-derive = { path = "../edu-ws-derive" }

html-escape = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "1.9"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
url = { version = "2.2", features = ["serde"] }

# SSO
base64 = "0.13"
hex = { version = "0.4", features = ["serde"] }
md5 = "0.7"
rand = "0.8"

[dev-dependencies]
time = { version = "0.3", features = ["macros", "serde"] }
